Fix CI upstream tests
Remove unnecessary 'gem' packaging during upstream gem installation.

* Bump 'com.github.jruby-gradle.base' to v2.0.1
* Bump 'gem-maven-plugin' to v2.0.1
* Remove some unnecessary test files and configurations

Fixes #1171